# gfetch-cli

./: .coveragerc  .env  .gitignore  2024-07-05_emails.txt  JUSTFILE  README.md  clean_emails.py  env-template  privacy_policy.md  pyproject.toml  pytest.ini  requirements.in  requirements.txt  retrieve_emails.py  terms_of_service.md
cleaned_emails/: email_18cdfcfbc0945573.txt  email_18fdafbc038d3ed4.txt  email_18fe5c20e94d66e2.txt  email_19080e7e20f4e82f.txt  email_190813b97af01d13.txt  email_1908292955142c62.txt  email_19088f4cc047c9b3.txt  email_1908db2fc57a78a4.txt  email_1909dc23f1f5588d.txt  email_1909e214e88ce7dd.txt  email_190a89a565a03885.txt  email_190aca5006b302f0.txt  email_190b68d9586a303e.txt
raw_emails/: email_18cdfcfbc0945573.eml  email_18fdafbc038d3ed4.eml  email_18fe5c20e94d66e2.eml  email_19080e7e20f4e82f.eml  email_190813b97af01d13.eml  email_1908292955142c62.eml  email_19088f4cc047c9b3.eml  email_1909dc23f1f5588d.eml  email_1909e214e88ce7dd.eml  email_190a89a565a03885.eml  email_190aca5006b302f0.eml  email_190b68d9586a303e.eml
src/app/: clean_emails.py  retrieve_emails.py
src/gfetch/: app.py  auth.py  emails.py
tests/: conftest.py  test_app.py  test_auth.py  test_emails.py  test_retrieve_emails.py
